# personalStudyNotes

./: README.md  test1分支.txt
C++/01作业-c++版石头剪刀布/: 01作业-c++版石头剪刀布.sln  01作业-c++版石头剪刀布.vcxproj  main.cpp
C++/map+单例设计模式管理资源/: Res.cpp  Res.h  map+单例设计模式管理资源.sln  map+单例设计模式管理资源.vcxproj  map+单例设计模式管理资源.vcxproj.filters  源.cpp
C++/test/: main.c  test.sln  test.vcxproj
C++/机房预约系统/: ComputerRooom.h  Identity.h  Main.cpp  Manager.cpp  Manager.h  OrderFile.cpp  OrderFile.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  computerRoom.txt  globalFile.h  order.txt  student.txt  机房预约系统.sln  机房预约系统.vcxproj  机房预约系统.vcxproj.filters
C++/演讲比赛流程管理系统/: speaker.h  speech.csv  speechManager.cpp  speechManager.h  源.cpp  演讲比赛流程管理系统.sln  演讲比赛流程管理系统.vcxproj
C++/画图小工具（easyx用c++类封装）/: ExCommon.h  ExLine.cpp  ExLine.h  ExPoint.cpp  ExPoint.h  ExWindow.cpp  ExWindow.h  draw_demo.cpp  画图小工具（easyx用c++类封装）.sln  画图小工具（easyx用c++类封装）.vcxproj  画图小工具（easyx用c++类封装）.vcxproj.filters
C++/简单模拟c++string类/: 源.cpp  简单模拟c++string类.sln  简单模拟c++string类.vcxproj
C/16文件操作/: 16文件操作.sln  16文件操作.vcxproj  FileName.c  strRead.txt
C/Write_a_Shell_in_C/: Write_a_Shell_in_C.sln  Write_a_Shell_in_C.vcxproj  main.c
C/smallTool/: main.cpp  smallTool.sln  smallTool.vcxproj  smallTool.vcxproj.filters
C/测试/: FileName.cpp  new-Test.txt  测试.sln  测试.vcxproj
C/顿开图书管理系统C版/: Book.c  Book.h  BookIndex.c  BookIndex.h  BookManage.c  BookManage.h  Circulate.c  Circulate.h  CirculateManage.c  CirculateManage.h  Configure.h  List.c  List.h  Menu.c  Menu.h  Reader.c  Reader.h  ReaderManager.c  ReaderManager.h  SeqList.h  User.c  User.h  UserManager.c  UserManager.h  源.c  顿开图书管理系统C版.sln  顿开图书管理系统C版.vcxproj  顿开图书管理系统C版.vcxproj.filters
Python/P11/: main.py  my_csv
Qt/02bacetype/: CMakeLists.txt  main.cpp
Qt/04_signal_slots/: 01 简单的按钮和各种函数作为槽函数.cpp  03 自定义信号.cpp  CMakeLists.txt  SubWidget.cpp  SubWidget.h  Widget.cpp  Widget.h  main.cpp
Qt/05_memory/: 01.cpp  02.cpp  03.cpp  CMakeLists.txt  main.cpp
Qt/06_QWidget/: CMakeLists.txt
Qt/07_event/: CMakeLists.txt  main.cpp
Qt/08_event_2/: CMakeLists.txt  main.cpp
Qt/09_paint/: CMakeLists.txt  images.qrc  main.cpp
Qt/10_QtGame/: Bullet.cpp  Bullet.h  CMakeLists.txt  Entity.h  EntityManager.h  Global.h  Map.cpp  Map.h  PlayerPlane.cpp  PlayerPlane.h  QGame.cpp  QGame.h  Sprite.cpp  Sprite.h  main.cpp
Qt/11_layout/: CMakeLists.txt  main.cpp
Qt/12_MainWindow/: CMakeLists.txt
Qt/14_LoginRegister/: CMakeLists.txt  LoginRegisterDlg.h  main.cpp
Qt/16_WindeployQt_GUI/: CMakeLists.txt  QtEnvSearch.cpp  QtEnvSearch.h  Resource.qrc  WindeployQtUI.cpp  WindeployQtUI.h  main.cpp
Qt/17_Wallpaper/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  (+4 more)
Qt/UserPrivilegeManagerSystem/UPM-Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Resource.qrc  main.cpp
Qt/UserPrivilegeManagerSystem/UPM-Client/LoginRegister/: LoginRegisterDlg.cpp  LoginRegisterDlg.h
Qt/UserPrivilegeManagerSystem/UPM-Client/SubPage/: CMakeLists.txt  UserAddDlg.cpp  UserAddDlg.h  UserDetailsDlg.cpp  UserDetailsDlg.h  UserManagePage.cpp  UserManagePage.h  UserManagePage.ui
Qt/UserPrivilegeManagerSystem/UPM-Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Qt/UserPrivilegeManagerSystem/Util/: CMakeLists.txt  SConfigFile.cpp  SConfigFile.h  SHttpPartParse.cpp  SHttpPartParse.h  SResultCode.h  SSqlConnectionPool.cpp  SSqlConnectionPool.h
devc++test1/: Makefile.win  未命名2.cpp  项目1.dev  项目1.layout
test/: test.sln  test.vcxproj  源.cpp
学校的数据结构与算法/: 哈夫曼压缩解压缩.7z  复习哈夫曼压缩解压缩之解压缩.7z  复习哈夫曼压缩解压缩编码.7z
(+472 files in other folders)
